--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/server.js"
+    "start": "nodemon ./src/server.js",
+    "startAuth": "nodemon ./src/authServer.js"
   },
   "keywords": [
     "nodejs"
@@ -13,10 +14,18 @@
   "author": "luong",
   "license": "ISC",
   "dependencies": {
+    "alert": "^6.0.2",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.13.0",
+    "node-notifier": "^10.0.1",
+    "nodemon": "3.1.9",
+    "popups": "^1.1.3",
     "view-engine": "^1.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "3.1.9"
   }
 }
